// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Post /> should render component with uiState prop which value is "loading" 1`] = `
<Fragment>
  <Loading />
</Fragment>
`;

exports[`<Post /> should render initial page 1`] = `
<Fragment>
  <Item
    breadcrumb={Object {}}
    content={Object {}}
  />
</Fragment>
`;
